[package]
authors = ["Sendil Kumar <sendilkumarn@live.com>"]
categories = ["wasm", "WebAssembly", "Markdown"]
description = "A Markdown parser with WebAssembly"
name = "wasm-markdown"
readme = "./README.md"
license = "Apache-2.0/MIT"
repository = ""
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
comrak = "0.6"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
lto = true
opt-level = 'z'